@@ -1,2 +1,3 @@
 The vSphere module uses the https://github.com/vmware/govmomi[Govmomi] library to collect metrics from any Vmware SDK URL (ESXi/VCenter). This library is built for and tested against ESXi and vCenter 5.5, 6.0 and 6.5.
 
+By default it enables the metricsets `datastore`, `host` and `virtualmachine`.
